kustomize/workload-multus-internet/network-instance-505-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-internet-505-network-instance-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: multus-internetipvrfitfce505
    type: ip-vrf
    admin-state: enable
    description: paco-multus-internetipvrfitfce505
    interface:
    - name: ethernet-1/50.505
    - name: irb0.502
    - name: irb0.501
    vxlan-interface:
    - name: vxlan0.505
