kustomize/workload-multus-internet/network-instance-protocol-bgpevpn502-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internet-502-protocolbgpevpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-internetmacvrfsriov1502
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 502
      vxlan-interface: vxlan0.502
