kustomize/workload-multus-internet/network-instance-protocol-bgpevpn503-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internet-503-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-503
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 503
      vxlan-interface: vxlan0.503
