kustomize/workload-multus-internet/network-instance-protocol-bgpevpn505-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internet-505-protocolbgpevpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-internetipvrfitfce505
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 505
      vxlan-interface: vxlan0.505
