kustomize/workload-multus-internet/network-instance-protocol-bgpvpn502-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-internet-502-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-sriov-502
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:502
        import-rt: target:65002:502
