kustomize/workload-multus-internet/network-instance-protocol-bgpvpn503-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-internet-503-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-503
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:503
        import-rt: target:65002:503
