kustomize/workload-multus-internet/network-instance-protocol-bgpvpn505-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-internet-505-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-internetipvrfitfce505
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:505
        import-rt: target:65002:505
