kustomize/workload-multus-internet/network-instance-protocol-linux501-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internet-501-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-ipvlan-501
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
