kustomize/workload-multus-internet/network-instance-protocol-linux502-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internet-502-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-sriov-502
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
