kustomize/workload-multus-internet/network-instance-protocol-linux505-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internet-505-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-ipvrf-itfce-505
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
