kustomize/workload-multus-internet/subinterface-lag1-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-internet-subinterface-lag1-leaf2
  labels:
    target: leaf2
spec:
  interface-name: lag1
  subinterface:
  - index: 501
    type: bridged
    admin-state: enable
    description: "paco-esi1-501-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "501"
  - index: 503
    type: bridged
    admin-state: enable
    description: "paco-esi1-503-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "503"
